# Sporky-levenshtein

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
