[package]
name = "sporky-checker"
version = "1.0.1"
edition = "2021"
description = "Simple levenshtein spell checker app"
license = "Apache-2.0"

[[bin]]
name = "sporky-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.2.0"
rust-embed = "8.5.0"
